# agent-notifier

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
src/agent_notifier/: __init__.py  digest.py  notifier.py  router.py  webhook.py
src/agent_notifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_digest.py  test_notifier.py  test_router.py  test_webhook.py
